welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value temps2
  if(temp1<0 && temps2>100 || temp2<0 && temps1>100){
                ^icyHot:2: error: not found: value temps1
  if(temp1<0 && temps2>100 || temp2<0 && temps1>100){
                                         ^