welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
  if(temp1<0 && temps2>100 || temp2<0 && temps1>100){
    return true;
  }
  return false;
}